fix for main-div overflow: min-height instead of height

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,7 @@ a {
 }
 
 body .main-div {
-  height:100%
+  min-height:100%
 }
 
 .hover-zoom:hover {
